tests/semantic/fact_ctr/fact_ctr.err
Error: Argument in fact is not constant in file fact_ctr.dl at line 7
F(autoinc(),"AA").
--^----------------
1 errors generated, evaluation aborted
